# optic-mart

./: README.md  code-workspace.code-workspace
clients/frame-web-client/: package-lock.json  package.json  rollup.config.js
clients/order-web-client/: package-lock.json  package.json  rollup.config.js  tsconfig.json
clients/shell-web-client/: package-lock.json  package.json  rollup.config.js  tsconfig.json
clients/shell-web-client/src/: index.html
clients/user-web-client/: package-lock.json  package.json  rollup.config.js
design/: explainer.md
design/command-services/user/: explainer.md
design/epics/: askforpermission.md  createframe.md  deleteframe.md  login.md  markframeasprivate.md  markreceivedorderasprocessed.md  modifyuser.md  order.md  registeruser.md  rejectreceivedorder.md  scratchpad.md  searchforframe.md  selectfolloweestogetframeactivitynotificationsfrom.md  unfollow.md  viewfollowees.md  viewframebyurl.md  viewframesindividually.md
design/epics/frame/: createframe.md  deleteagroupofframes.md  deleteframe.md  explainer.md  getnotificationforframeactivity.md  markframeasprivate.md  modifyframe.md  searchforframe.md  viewadmincontrolsonaframespage.md  viewframecollectionbyothers.md  viewframescollectivelybytheowner.md  viewframesindividually.md
design/epics/order/: cancelplacedorder.md  cancelunprocessedorder.md  explainer.md  markreceivedorderasprocessed.md  order.md  rejectreceivedorder.md  vieweceivedordersindividually.md  vieworderscollectively.md  viewordersindividually.md  viewplacedorderscollectively.md  viewplacedordersindividually.md  viewreceivedorderscollectively.md  viewreceivedordersindividually.md
design/epics/social/: askforpermission.md  explainer.md  follow.md  permituser.md  revokepermission.md  selectfolloweestogetframeactivitynotificationsfrom.md  unfollow.md  viewfollowees.md  viewfollowers.md
design/epics/user/: deleteuser.md  explainer.md  login.md  modifyuser.md  registeruser.md  searchforuser.md  viewuser.md
design/query-services/user/: explainer.md
services/command-services/frame-command-service/: Cargo.toml  (+1 more)
services/command-services/user-command-service/: .gitignore  Cargo.toml  Dockerfile  user.json
services/command-services/user-command-service/src/: event.rs  main.rs  user.rs  utils.rs
services/command-services/user-command-service/src/user/: login.rs  mod.rs  modify.rs  register.rs
services/query-services/frame-query-service/: .gitignore  Cargo.toml
services/query-services/frame-query-service/src/: event.rs  main.rs  utils.rs
services/query-services/frame-query-service/src/frame/: get.rs  mod.rs  search.rs
services/query-services/user-query-service/: .gitignore  Cargo.toml  secrets.toml
services/query-services/user-query-service/src/: event.rs  main.rs  user.rs  utils.rs
services/query-services/user-query-service/src/user/: get.rs  get_all.rs  mod.rs  search.rs
(+45 files in other folders)
