[package]
name = "user-command-service"
version = "0.1.0"
authors = ["thesdev <thesdev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1"
uuid = { version = "0.7", features = ["v4"] }
bcrypt = "0.5"
serde = "1"
serde_json = "1"
reqwest = "0.9"
futures = "0.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
