[package]
name = "frame-query-service"
version = "0.1.0"
authors = ["thesdev <thesdev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.1"
actix-web = "1"
async-std = { version = "1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.9"
jwt = { package = "jsonwebtoken", version = "6" }
lazy_static = "1.4"
postgres = { version = "0.16.0-rc.2", features = ["with-chrono-0_4"] }
regex = "1"
serde = "1"
serde_json = "1"
surf = "1"
